src/test/ui/proc-macro/macro-brackets.stderr
error[E0308]: mismatched types
  --> $DIR/macro-brackets.rs:11:21
   |
LL | id![static X: u32 = 'a';];
   |                     ^^^ expected `u32`, found `char`
   |
help: you can cast a `char` to a `u32`, since a `char` always occupies 4 bytes
   |
LL | id![static X: u32 = 'a' as u32;];
   |                         ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
